# teeth-3d-mesh-segmentation

./: .gitignore  README.md  pyproject.toml
teeth_3d_seg/configs/: label_decoder.json  label_encoder.json  settings.py
teeth_3d_seg/configs/inference/: inference_config.yaml
teeth_3d_seg/configs/training/: training_config.yaml
teeth_3d_seg/dataset/: mesh_dataset.py  mesh_loader.py
teeth_3d_seg/dataset/.ipynb_checkpoints/: mesh_dataset-checkpoint.py
teeth_3d_seg/inference/: predict.py
teeth_3d_seg/metrics/: metrics.py
teeth_3d_seg/model/: meshsegnet.py
teeth_3d_seg/training/: losses.py  train.py  training.py  validation.py
teeth_3d_seg/utils/: file.py
